# python-board

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  entrypoint.sh  pyproject.toml  pytest.ini
alembic/: env.py
alembic/versions/: 606402748899_.py
app/: dependencies.py  main.py
app/api/v1/: account.py  board.py  post.py
app/core/: config.py  security.py
app/crud/: account.py  board.py  post.py
app/db/: models.py  session.py
app/repositories/: account.py  board.py  post.py
app/schemas/: account.py  board.py  post.py
app/services/: account.py  auth.py  board.py  post.py
app/utils/: exceptions.py
tests/: conftest.py
tests/functional/: test_account.py  test_baord.py  test_post.py
tests/unit/: test_account.py  test_auth.py  test_baord.py  test_post.py
