[tool.poetry]
name = "app"
version = "0.1.0"
description = "API for forum service"
authors = ["adenHustlin <baekdam8@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.78.0"
uvicorn = "^0.17.0"
sqlalchemy = "^1.4.27"
asyncpg = "^0.24.0"
alembic = "^1.7.5"
redis = "^4.1.0"
pydantic = "^1.8.2"
passlib = "^1.7.4"
python-dotenv = "^0.19.2"
greenlet = "^3.0.3"
httpx = "^0.27.0"
email-validator = "^2.1.1"
python-jose = "^3.3.0"
bcrypt = "3.2.0"
requests = "^2.31.0"
anyio = "3.7.1"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
pytest-asyncio = "^0.16.0"
pre-commit = "^2.15.0"
black = "^22.3.0"
isort = "^5.10.1"

[tool.isort]
profile = "black"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
